2010-10-16  Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #15696: Implement TypoScript conditions for the current page record (Thanks to Stefan Neufeind)
	* Follow-up to #15576: Code for t3lib_message_ErrorpageMessage was contained twice
	* Fixed bug #15976: [version] Reference to global array $TCA without fetching from global scope

2010-10-16  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #15868: Provide function to open debug messages in a popup (Thanks to Stefan Galinski)
	* Fixed bug #15799: Uninitialized variables in t3lib (Thanks to Oliver Klee)

2010-10-16  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #16021: TCEmain: Put visibility functions to the appropriate methods (Thanks to Tolleiv Nietsch)
	* Fixed bug #14835: IRRE Move-Icon should have curser:move (Thanks to Georg Ringer)
	* Fixed bug #15799: Uninitialized variables in t3lib within TCEmain (Thanks to Oliver Klee)
	* Fixed bug #15799: Uninitialized variables in t3lib within version extension (Thanks to Oliver Klee)
	* Fixed bug #15576: Enable customization for fatal error messages in the backend and frontend / Make all page errors RuntimeExceptions and unify BE and FE fatal errors in a single HTML template (Thanks to Reinhard Führicht, Aske Ertmann)
	* Fixed bug #15877: Put versioning code from TCEmain in version extension - part #2 - moving records

2010-10-16  Ernesto Baschny  <ernst@cron-it.de>

	* Added feature #16007: Allow skins to register sprites through addIconSprite
	* Added feature #15229: Core lacks current flags (Thanks to Steffen Ritter)
	* Cleanup #16009: Refactor sprite icon API, to have more elementary functions instead of big ones (Thanks to Steffen Ritter)
	* Added feature #15966: Adds mode to debug the backend ($TYPO3_CONF_VARS['BE']['debug']) (Thanks to Steffen Kamper)
	* Fixed bug #16016: Scheduler: Since new CSH handling (#15990), no icon in scheduler works anymore